# M2P_test_analysis

./: .gitignore  CMakeLists.txt  M2P_test_analysis.cpp  M2P_test_analysis.sln  MarkerDetectInROI.cpp
M2P_test_analysis/: CBlobDetectorController.cpp  CBlobDetectorController.h  CBlobDetectorControllerCVUI.cpp  CBlobDetectorControllerCVUI.h  COpenCVShowManyImages.cpp  COpenCVShowManyImages.h  COpenCVVideoControlBar.cpp  COpenCVVideoControlBar.h  CReferenceBoard.cpp  CReferenceBoard.h  M2P_test_analysis.cpp  M2P_test_analysis.h  M2P_test_analysis.vcxproj  M2P_test_analysis.vcxproj.filters  MarkerDetectInROI.cpp  MarkerDetectInROI.h  OCVInterface.cpp  OCVInterface.h  big_mark_config_save.json  markerDetect.cpp  markerDetect.h  pch.h  resource.h  run_python_analyze.bat  small_mark_config_save.json  smallmarker_config_save.yml  start.bat
M2P_test_analysis/M2P_test_analysis_python/: DataChart.ipynb  DataChartGenerator.ipynb  DataChartGenerator.py  DataChartGenerator2.ipynb  DataChartLinux.ipynb  log.csv  log11.csv  log13.csv  log2.csv  log3.csv  log8.csv
M2P_test_analysis/M2P_test_analysis_python/.ipynb_checkpoints/: DataChart-checkpoint.ipynb
M2P_test_analysis/cmdline/: cmdline.h
